url bug fixing process #2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="grid grid-cols-2 items-center">
           <div class="col-span-1">
             <h2 class="font-header text-6xl tracking-wide mb-7 animate-center">
-              Hey there, <a href="about.html" class="text-primary underline text-underline">I'm Can!</a>
+              Hey there, <a href="about" class="text-primary underline text-underline">I'm Can!</a>
             </h2>
             <p class="text-xl">
               I am an aspiring computer engineering student with experience in
