--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="font-body text-dimgrey">
-        <header class="px-56">
+        <header class=" px-10 md:px-56">
           <nav class="flex justify-between items-center py-14 mb-10">
             <div>
               <h1 class="font-header font-extrabold text-2xl text-primary animate-center">
@@ -42,7 +42,7 @@
             </ul>
           </nav>
             <main>
-                <div class="grid grid-cols-2 items-center">
+                <div class="md:grid md:grid-cols-2 items-center">
                     <div class="col-span-1"><img src="dist/img/thumbs-up.png" alt="can" class="animate-center mx-auto"></div>
                     <div class="col-span-1">
                         <h2 class="font-header font-extrabold text-3xl mb-10 animate-center">Hey there, I'm Can!</h2>
@@ -61,20 +61,20 @@
                 </div>
                 
             </main>
-        <footer class="mt-40 mb-10 px-56 text-center">
-          <p class="mb-5 text-lg">Made by Can Polat</p>
-          <div class="flex justify-center">
-            <a href="https://www.linkedin.com/in/can-polatt/"
-              ><img src="dist/svgs/linkedin.svg" alt="linkedin" class="w-6 mr-5"
-            /></a>
-            <a href="https://twitter.com/cnpolattt"
-              ><img src="dist/svgs/twitter.svg" alt="twitter" class="w-6 mr-5"
-            /></a>
-            <a href="https://github.com/canpolatt"
-              ><img src="dist/svgs/github.svg" alt="github" class="w-6"
-            /></a>
-          </div>
-        </footer>
+            <footer class="mt-10 md:mt-40 mb-10 md:px-56 text-center">
+              <p class="mb-5 text-lg">Made by Can Polat</p>
+              <div class="flex justify-center">
+                <a href="https://www.linkedin.com/in/can-polatt/"
+                  ><img src="dist/svgs/linkedin.svg" alt="linkedin" class="w-6 mr-5"
+                /></a>
+                <a href="https://twitter.com/cnpolattt"
+                  ><img src="dist/svgs/twitter.svg" alt="twitter" class="w-6 mr-5"
+                /></a>
+                <a href="https://github.com/canpolatt"
+                  ><img src="dist/svgs/github.svg" alt="github" class="w-6"
+                /></a>
+              </div>
+            </footer>
       </div>
 </body>
 </html>
