--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="font-body text-dimgrey">
-      <header class="px-56">
+      <header class="px-10 md:px-56">
         <nav class="flex justify-between items-center py-14 mb-10">
           <div>
             <h1 class="font-header font-extrabold text-2xl text-primary animate-center">
@@ -17,7 +17,8 @@
             </h1>
           </div>
           <ul class="flex text-lg">
-            <li
+            <a href="about">
+              <li
               class="
                 hover:text-primary
                 cursor-pointer
@@ -28,6 +29,8 @@
             >
               About
             </li>
+            </a>
+
             <li
               class="
                 hover:text-primary
@@ -42,7 +45,7 @@
             </li>
           </ul>
         </nav>
-        <div class="grid grid-cols-2 items-center">
+        <div class="grid md:grid-cols-2 sm:grid-cols-1 items-center">
           <div class="col-span-1">
             <h2 class="font-header text-6xl tracking-wide mb-7 animate-center">
               Hey there, <a href="about" class="text-primary underline text-underline">I'm Can!</a>
@@ -62,27 +65,27 @@
           </div>
         </div>
         <h2 class="font-header text-4xl mb-20 animate-center">I'm a...</h2>
-        <div class="grid grid-cols-3 text-center">
-          <div class="font-header text-xl">
+        <div class="grid grid-rows-3 md:grid-rows-1 md:grid-cols-3 text-center">
+          <div class="font-header text-xl mb-7">
             <span class="block text-6xl mb-5">💻</span> Computer Engineering
             student
           </div>
-          <div class="font-header text-xl">
+          <div class="font-header text-xl mb-7">
             <span class="block text-6xl mb-5">🎨</span> Front-end Enthusiast
           </div>
-          <div class="font-header text-xl">
+          <div class="font-header text-xl mb-7">
             <span class="block text-6xl mb-5">⏱</span> Occasional Speedsolver
           </div>
         </div>
       </header>
-      <main class="px-56 mt-40">
-        <h3 class="font-header text-3xl text-center mb-20">
+      <main class="px-10 md:px-56 md:mt-40">
+        <h3 class="font-header text-3xl text-center mb-10">
           Check out my portfolio 👇
         </h3>
-        <div class="grid grid-rows-3 gap-14">
-          <div class="row-span-1 flex items-center gap-14">
-            <div class="w-1/2">
-              <h2 class="font-header text-6xl">Covidex</h2>
+        <div class="grid grid-rows-3 md:grid-rows-3 md:gap-14">
+          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14">
+            <div class="md:w-1/2">
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Covidex</h2>
               <p class="my-10">
                 Covidex is a web application for the patient management system
                 during Covid19 pandemic. Focused on reusable, maintainable and
@@ -103,9 +106,9 @@
               />
             </div>
           </div>
-          <div class="row-span-1 flex items-center gap-14">
-            <div class="w-1/2">
-              <h2 class="font-header text-6xl">Baskent Connect</h2>
+          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14 mt-10">
+            <div class="md:w-1/2">
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Baskent Connect</h2>
               <p class="my-10">
                 Baskent Connect is a chat application where group conversations
                 and announcements can be made for lecturers and students to
@@ -126,9 +129,9 @@
               />
             </div>
           </div>
-          <div class="row-span-1 flex items-center gap-14">
-            <div class="w-1/2">
-              <h2 class="font-header text-6xl">Passbook</h2>
+          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14 mt-10">
+            <div class="md:w-1/2">
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Passbook</h2>
               <p class="my-10">
                 A web application to store all passwords in a single platform to
                 make it easier to manage.
@@ -143,7 +146,7 @@
           </div>
         </div>
       </main>
-      <footer class="mt-40 mb-10 px-56 text-center">
+      <footer class="mt-10 mb-10 md:mt-40 md:px-56 text-center">
         <p class="mb-5 text-lg">Made by Can Polat</p>
         <div class="flex justify-center">
           <a href="https://www.linkedin.com/in/can-polatt/"
