--- a/about.html
+++ b/about.html
@@ -27,18 +27,20 @@
               >
                 About
               </li>
-              <li
-                class="
-                  hover:text-primary
-                  cursor-pointer
-                  transition
-                  ease-out
-                  duration-200
-                  ml-7
-                "
-              >
-                Resume
-              </li>
+              <a href="https://drive.google.com/file/d/1o2q0Xupz1XBfir0HzZcUqL5eYS_FAz7-/view" target="_blank">
+                <li
+                  class="
+                    hover:text-primary
+                    cursor-pointer
+                    transition
+                    ease-out
+                    duration-200
+                    ml-7
+                  "
+                >
+                  Resume
+                </li>
+              </a>
             </ul>
           </nav>
             <main>
@@ -64,13 +66,13 @@
             <footer class="mt-10 md:mt-40 mb-10 md:px-56 text-center">
               <p class="mb-5 text-lg">Made by Can Polat</p>
               <div class="flex justify-center">
-                <a href="https://www.linkedin.com/in/can-polatt/"
+                <a href="https://www.linkedin.com/in/can-polatt/" target="_blank"
                   ><img src="dist/svgs/linkedin.svg" alt="linkedin" class="w-6 mr-5"
                 /></a>
-                <a href="https://twitter.com/cnpolattt"
+                <a href="https://twitter.com/cnpolattt" target="_blank"
                   ><img src="dist/svgs/twitter.svg" alt="twitter" class="w-6 mr-5"
                 /></a>
-                <a href="https://github.com/canpolatt"
+                <a href="https://github.com/canpolatt" target="_blank"
                   ><img src="dist/svgs/github.svg" alt="github" class="w-6"
                 /></a>
               </div>
