--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/style.css" />
+    <link rel="shortcut icon" href="dist/svgs/clover.svg" type="image/x-icon">  
     <title>Can Polat</title>
   </head>
   <body>
@@ -30,7 +31,7 @@
               About
             </li>
             </a>
-
+            <a href="https://drive.google.com/file/d/1o2q0Xupz1XBfir0HzZcUqL5eYS_FAz7-/view" target="_blank">
             <li
               class="
                 hover:text-primary
@@ -43,6 +44,7 @@
             >
               Resume
             </li>
+          </a>
           </ul>
         </nav>
         <div class="grid md:grid-cols-2 sm:grid-cols-1 items-center">
@@ -65,7 +67,7 @@
           </div>
         </div>
         <h2 class="font-header text-4xl mb-20 animate-center">I'm a...</h2>
-        <div class="grid grid-rows-3 md:grid-rows-1 md:grid-cols-3 text-center">
+        <div class="grid grid-rows-3 gap-4 md:grid-rows-1 md:grid-cols-3 text-center">
           <div class="font-header text-xl mb-7">
             <span class="block text-6xl mb-5">💻</span> Computer Engineering
             student
@@ -78,7 +80,7 @@
           </div>
         </div>
       </header>
-      <main class="px-10 md:px-56 md:mt-40">
+      <main class="px-10 mt-14 md:px-56 md:mt-40">
         <h3 class="font-header text-3xl text-center mb-10">
           Check out my portfolio 👇
         </h3>
@@ -149,13 +151,13 @@
       <footer class="mt-10 mb-10 md:mt-40 md:px-56 text-center">
         <p class="mb-5 text-lg">Made by Can Polat</p>
         <div class="flex justify-center">
-          <a href="https://www.linkedin.com/in/can-polatt/"
+          <a href="https://www.linkedin.com/in/can-polatt/" target="_blank"
             ><img src="dist/svgs/linkedin.svg" alt="linkedin" class="w-6 mr-5"
           /></a>
-          <a href="https://twitter.com/cnpolattt"
+          <a href="https://twitter.com/cnpolattt" target="_blank"
             ><img src="dist/svgs/twitter.svg" alt="twitter" class="w-6 mr-5"
           /></a>
-          <a href="https://github.com/canpolatt"
+          <a href="https://github.com/canpolatt" target="_blank"
             ><img src="dist/svgs/github.svg" alt="github" class="w-6"
           /></a>
         </div>
