--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css" />
+    <link rel="shortcut icon" href="dist/svgs/leaf.svg" type="image/x-icon">
     <title>About - Can Polat</title>
 </head>
 <body>
