--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/style.css" />
-    <link rel="shortcut icon" href="dist/svgs/clover.svg" type="image/x-icon">  
+    <link rel="shortcut icon" href="dist/svgs/leaf.svg" type="image/x-icon">  
     <title>Can Polat</title>
   </head>
   <body>
