--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/style.css" />
-    <link rel="shortcut icon" href="dist/svgs/leaf.svg" type="image/x-icon">  
+    <!-- <link rel="shortcut icon" href="dist/svgs/leaf.svg" type="image/x-icon">  -->
+    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>Can Polat</title>
   </head>
   <body>
@@ -13,44 +15,56 @@
       <header class="px-10 md:px-56">
         <nav class="flex justify-between items-center py-14 mb-10">
           <div>
-            <h1 class="font-header font-extrabold text-2xl text-primary animate-center">
+            <h1
+              class="
+                font-header font-extrabold
+                text-2xl text-primary
+                animate-center
+              "
+            >
               <a href="/">Can Polat</a>
             </h1>
           </div>
           <ul class="flex text-lg">
             <a href="about">
               <li
-              class="
-                hover:text-primary
-                cursor-pointer
-                transition
-                ease-out
-                duration-200
-              "
-            >
-              About
-            </li>
+                class="
+                  hover:text-primary
+                  cursor-pointer
+                  transition
+                  ease-out
+                  duration-200
+                "
+              >
+                About
+              </li>
             </a>
-            <a href="https://drive.google.com/file/d/1o2q0Xupz1XBfir0HzZcUqL5eYS_FAz7-/view" target="_blank">
-            <li
-              class="
-                hover:text-primary
-                cursor-pointer
-                transition
-                ease-out
-                duration-200
-                ml-7
-              "
+            <a
+              href="https://drive.google.com/file/d/1o2q0Xupz1XBfir0HzZcUqL5eYS_FAz7-/view"
+              target="_blank"
             >
-              Resume
-            </li>
-          </a>
+              <li
+                class="
+                  hover:text-primary
+                  cursor-pointer
+                  transition
+                  ease-out
+                  duration-200
+                  ml-7
+                "
+              >
+                Resume
+              </li>
+            </a>
           </ul>
         </nav>
         <div class="grid md:grid-cols-2 sm:grid-cols-1 items-center">
           <div class="col-span-1">
             <h2 class="font-header text-6xl tracking-wide mb-7 animate-center">
-              Hey there, <a href="about" class="text-primary underline text-underline">I'm Can!</a>
+              Hey there,
+              <a href="about" class="text-primary underline text-underline"
+                >I'm Can!</a
+              >
             </h2>
             <p class="text-xl">
               I am an aspiring computer engineering student with experience in
@@ -67,7 +81,14 @@
           </div>
         </div>
         <h2 class="font-header text-4xl mb-20 animate-center">I'm a...</h2>
-        <div class="grid grid-rows-3 gap-4 md:grid-rows-1 md:grid-cols-3 text-center">
+        <div
+          class="
+            grid grid-rows-3
+            gap-4
+            md:grid-rows-1 md:grid-cols-3
+            text-center
+          "
+        >
           <div class="font-header text-xl mb-7">
             <span class="block text-6xl mb-5">💻</span> Computer Engineering
             student
@@ -85,9 +106,20 @@
           Check out my portfolio 👇
         </h3>
         <div class="grid grid-rows-3 md:grid-rows-3 md:gap-14">
-          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14">
+          <div
+            class="
+              md:row-span-1
+              flex flex-col-reverse
+              justify-center
+              md:flex md:flex-row
+              items-center
+              md:gap-14
+            "
+          >
             <div class="md:w-1/2">
-              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Covidex</h2>
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">
+                Covidex
+              </h2>
               <p class="my-10">
                 Covidex is a web application for the patient management system
                 during Covid19 pandemic. Focused on reusable, maintainable and
@@ -108,9 +140,21 @@
               />
             </div>
           </div>
-          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14 mt-10">
+          <div
+            class="
+              md:row-span-1
+              flex flex-col-reverse
+              justify-center
+              md:flex md:flex-row
+              items-center
+              md:gap-14
+              mt-10
+            "
+          >
             <div class="md:w-1/2">
-              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Baskent Connect</h2>
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">
+                Baskent Connect
+              </h2>
               <p class="my-10">
                 Baskent Connect is a chat application where group conversations
                 and announcements can be made for lecturers and students to
@@ -131,9 +175,21 @@
               />
             </div>
           </div>
-          <div class="md:row-span-1 flex flex-col-reverse justify-center md:flex md:flex-row items-center md:gap-14 mt-10">
+          <div
+            class="
+              md:row-span-1
+              flex flex-col-reverse
+              justify-center
+              md:flex md:flex-row
+              items-center
+              md:gap-14
+              mt-10
+            "
+          >
             <div class="md:w-1/2">
-              <h2 class="font-header text-6xl mt-10 md:text-left text-center">Passbook</h2>
+              <h2 class="font-header text-6xl mt-10 md:text-left text-center">
+                Passbook
+              </h2>
               <p class="my-10">
                 A web application to store all passwords in a single platform to
                 make it easier to manage.
@@ -143,7 +199,11 @@
               >
             </div>
             <div>
-              <img src="dist/img/passbook.jpg" alt="dashboard" class="shadow-2xl" />
+              <img
+                src="dist/img/passbook.jpg"
+                alt="dashboard"
+                class="shadow-2xl"
+              />
             </div>
           </div>
         </div>
