--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div class="flex justify-center items-center h-screen text-dimgrey">
-        <h1 class="inline-block border-r-2 border-primary mr-4 pr-4 text-5xl font-semibold">404</h1>
-        <h2 class="text-2xl font-medium">This page could not be found.</h2>
+        <h1 class="inline-block border-r-2 border-primary mr-4 pr-4 text-2xl md:text-5xl font-semibold">404</h1>
+        <h2 class=" text-md md:text-2xl font-medium">This page could not be found.</h2>
     </div>
 </body>
 </html>
