--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css" />
     <!-- <link rel="shortcut icon" href="dist/svgs/leaf.svg" type="image/x-icon">  -->
-    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico">
     <title>404 | This page could not be found.</title>
 </head>
 <body>
